--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Volunteer Network</title>
+    <title>PCIU Volunteer Registration</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
